backend/app/assets/stylesheets/nav.css
nav.navbar.navbar-fixed-top.ng-scope{
    background-color: #FFF;
    min-height: 95px;
    margin: 0;
}

nav.navbar.navbar-fixed-top.ng-scope.homepage-nav{
  background: #FFF;
  min-height: 103px;
  background-repeat: no-repeat;
  background-size: cover;
}

#lltv .homepage-nav-links {
  padding-top: 27px;
  color: #5D5D5D;
  font-size: 12px;
  text-transform: uppercase;
  font-weight: 700;
  font-family: avenir-black, 'Work Sans';
}

#lltv .homepage-nav-links li {
  margin-left: 43px;
  float: right;
}

#lltv .homepage-nav-links .no-btn-nav {
  margin-top: 10px;
}

#lltv .homepage-nav-links li > a {
  color: #5D5D5D;
  padding: 0px;
  cursor: pointer;
  font-weight: 700;
}

#lltv .homepage-nav-links li > a:hover {
  background-color: transparent;
}

/* profile nav options */

.profile-dropdown{
  border: 0;
  padding: 0;
  width: 229px;
  text-align: center;
  font-size: 13px;
  top: 56px;
  right: -26px;
}

.profile-dropdown:after {
  content: '';
  position: absolute;
  bottom: 100%;
  left: 65%;
  margin-left: 31px;
  width: 0;
  height: 0;
  border-left: solid 13px transparent;
  border-right: solid 13px transparent;
  border-bottom: solid 13px #FFF;
}

#lltv .homepage-nav-links .profile-dropdown li{
  margin: 0 auto;
  margin-bottom: 40px;
  float: none;
}

#lltv .homepage-nav-links .profile-dropdown li:first-child{
  margin-top: 40px;
}

#lltv .homepage-nav-links .profile-dropdown li:last-child{
  margin-bottom: 40px;
}


#lltv #sign-up-bubble{
  border: 2px solid #FFF;
  background-color: #9CCC58;
  border-radius: 25px;
  padding: 10px 20px 10px 20px;
  margin-top: -12px;
  color: #FFF;
}

#lltv #sign-up-bubble a div{ color: #fff;}

.logo-img, .logo-modal-img{ height: 51px;}

#lltv .homepage-nav-links ul > li:last-child > .nav-search-text{
  display: none;
}

.navbar-toggle{
  margin-top: 16px;
}

.navbar-toggle .icon-bar{
  width: 24px;
  height: 4px;
  background: #5D5D5D;
}

@media screen and (max-width: 1000px){
  .logo-img{height: 35px;}
}

@media screen and (max-width: 800px){
  .logo-img{height: 30px;}
}

@media screen and (max-width: 767px){
  .logo-img{height: 52px;}

  nav.navbar.navbar-fixed-top.ng-scope.homepage-nav > div > .navbar-collapse{
    background-color: transparent;
  }

  /*delete this one*/
  /*nav.navbar.navbar-fixed-top.ng-scope > div > .navbar-collapse{
    background-color: #000;
  }*/

  #lltv .homepage-nav-links li:first-child{
    margin-top: 40px;
  }

  #lltv .homepage-nav-links li {
    margin-right: 0px;
    margin-left: 0px;
    margin-bottom: 30px;
    float: none;
  }

  #lltv .homepage-nav-links li:last-child{ margin-bottom: 44px;}

  #lltv #sign-up-bubble a div{color: inherit;}

  #lltv #sign-up-bubble{
     border: 0;
     border-radius: 0;
     padding: 0;
     margin-top: 20px;
     background-color: transparent;
     color: #5D5D5D;
   }

   #lltv .homepage-nav-links {
    width: 100%;
    text-align: center;
    padding: 0;
    border: 0px;
    position: absolute;
    margin: 0;
    left: 0;
    top: 110%;
    background-color: white;
    font-size: 15px;
  }

  #lltv .homepage-nav-links .navbar-nav {
    width: 30%;
    margin: 0 auto;
  }

  /*dropdown triangle*/
  #lltv .navbar-collapse:after {
    display: none;
    content: '';
    position: absolute;
    top: 22%;
    margin-left: 72px;
    width: 0;
    height: 0;
    border-left: solid 13px transparent;
    border-right: solid 13px transparent;
    border-bottom: solid 13px #FFF;
  }

  #lltv .homepage-nav-links ul.nav.navbar-nav > li:last-child > a:first-child{
    display: none;
  }

  #lltv .homepage-nav-links ul > li:last-child > .nav-search-text{
    display: block;
  }

  .profile-dropdown:after{ display: none;}

}

@media screen and (max-width: 500px){
  .logo-img{ height: 48px;}

}

@media screen and (max-width: 320px){
  nav.navbar-fixed-top > div > a > .logo-img{
    height: 41px;
  }

  .navbar-toggle{margin-top: 11px;}

}

